--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@
 # Find out more: https://morph.io/documentation/python
 
 # Custom version of scraperwiki library
--e git+http://github.com/openaustralia/scraperwiki-python.git@morph_defaults#egg=scraperwiki
+#-e git+http://github.com/openaustralia/scraperwiki-#python.git@morph_defaults#egg=scraperwiki
 
-lxml==3.4.4
-cssselect==0.9.1
+requests==2.10.0
+python-dateutil==2.5.3
+requests-cache==0.4.12
