--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@
 # Custom version of scraperwiki library
 #-e git+http://github.com/openaustralia/scraperwiki-#python.git@morph_defaults#egg=scraperwiki
 
-requests==2.10.0
-python-dateutil==2.5.3
-requests-cache==0.4.12
+requests
+python-dateutil
+requests-cache
